src/testData/analysis/tuplesAndHashes.cr
x = <error descr="Empty hash literals must have an explicit type">{}</error>

x = <error descr="Empty hash literals must have an explicit type">{ }</error>

x = <error descr="Empty hash literals must have an explicit type">{

}</error>

x = {} of Int32 => String

x = {1, 2, 3}

x = {123 => "123", 456 => "456"}

x = {a: 123, b: 456}